kubernetes/home/media/qui/app/resources/Deployment--home-media--qui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qui
  namespace: home-media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qui
  template:
    metadata:
      labels:
        app: qui
    spec:
      containers:
        - name: qui
          image: ghcr.io/autobrr/qui:v1.6.1
          ports:
            - containerPort: 7476
          resources:
            requests:
              cpu: 20m
              memory: 96Mi
            limits:
              memory: 96Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /config

            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: qui

        - name: data
          persistentVolumeClaim:
            claimName: qui
